...
                        name="mail-outline" 
                        size={20} 
                        color={colors.primary} 
                        style={gs.inputIcon} 
                      />
                      <TextInput
                        testID="sign-in-email-input"
                        style={gs.input}
                        placeholder={TEXTS.EMAIL_PLACEHOLDER}
                        placeholderTextColor={errors.email ? colors.error : colors.accent}
                        keyboardType="email-address"
                        autoCapitalize="none"
                        onChangeText={(text) => handleInputChange('email', text)}
...
                        name="lock-closed-outline" 
                        size={20} 
                        color={colors.primary} 
                        style={gs.inputIcon} 
                      />
                      <TextInput
                        testID="sign-in-password-input"
                        style={gs.input}
                        placeholder={TEXTS.PASSWORD_PLACEHOLDER}
                        placeholderTextColor={colors.accent}
                        secureTextEntry={!isPasswordVisible}
                        onChangeText={(text) => handleInputChange('password', text)}
                        onFocus={() => setFocusedField('password')}
...
                    </View>
                    {errors.password ? <Text style={gs.errorText}>{errors.password}</Text> : null}
                  </View>

                  <View style={styles.buttonContainer}>
                    <TouchableOpacity
                      testID="sign-in-submit-button"
                      onPressIn={handlePressIn}
                      onPress={handleLogin}
                      disabled={isButtonDisabled}
                      style={[
                        styles.mainButton,
                        {
...
